--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,15 @@
     }
   ],
   "require": {
-    "guzzlehttp/guzzle": "^6.5"
+    "guzzlehttp/guzzle": "^6.5",
+    "vlucas/phpdotenv": "^4.1"
   },
   "autoload": {
     "psr-4": {
       "Smartsheet\\": "src/"
     }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^8"
   }
 }
