--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
     }
   ],
   "require": {
-    "guzzlehttp/guzzle": "^6.5",
-    "vlucas/phpdotenv": "^4.1"
+    "guzzlehttp/guzzle": "^6.5"
   },
   "autoload": {
     "psr-4": {
@@ -26,6 +25,7 @@
     }
   },
   "require-dev": {
-    "phpunit/phpunit": "^8"
+    "phpunit/phpunit": "^8",
+    "vlucas/phpdotenv": "^4.1"
   }
 }
