--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,11 @@
     }
   ],
   "require": {
-    "guzzlehttp/guzzle": "^6.5"
+    "php": "^7.4",
+    "guzzlehttp/guzzle": "^6.5",
+    "ext-json": "*",
+    "tightenco/collect": "^7.12",
+    "ext-curl": "*"
   },
   "autoload": {
     "psr-4": {
