--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,10 @@
   "require-dev": {
     "phpunit/phpunit": "^8",
     "vlucas/phpdotenv": "^4.1"
+  },
+  "scripts": {
+    "test": [
+      "vendor/binphpunit"
+    ]
   }
 }
