add api token for testing

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -32,3 +32,5 @@ jobs:
 
     - name: Run test suite
       run: composer run-script test
+      env:
+        SMARTSHEET_API_TOKEN: ${{ secrets.SMARTSHEET_API_TOKEN }}
