--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     }
   ],
   "require": {
-    "php": "^8.0",
+    "php": "^7.4|^8.0",
     "guzzlehttp/guzzle": "^7.2.0",
     "illuminate/collections": "^8.19",
     "ext-json": "*",
